--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Esto es un título</h1>
+    <h2>Esto es un subtítulo</h2>
+    <h3>Esta línea fue hecha haciendo un soft reset y luego un push (Se hizo como un experimento) </h3>
 </body>
 </html>
