--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Esto es un título</h1>
     <h2>Esto es un subtítulo</h2>
+
+    <h4>Esto es un texto con h4</h4>
 </body>
 </html>
