--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h2>Esto es un subtítulo</h2>
     <h3>Esto es un texto con h3</h3>
     <h4>Esto es un texto con h4</h4>
-    <p></p>
+    <p id="parrafo1"></p>
+    <p id="parrafo2"></p>
+    <p id="parrafo3"></p>
 </body>
 </html>
