--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p id="parrafo2"></p>
     <p id="parrafo3"></p>
     <h5>Hola</h5>
+    <h3>Esto es un h3</h3>
     <h4>Este es un h4 desde la interfaz</h4>
 </body>
 </html>
