Resolviendo el PRAC-1

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p id="parrafo1"></p>
     <p id="parrafo2"></p>
     <p id="parrafo3"></p>
+    <h5>Esto es para resolver la primera incidencia</h5>
 </body>
 </html>
