--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Esto es un texto con h3</h3>
     <h4>Esto es un texto con h4</h4>
     <p id="parrafo1"></p>
+    <h2>Ya creé el h2 para resolver la incidencia</h2>
     <p id="parrafo2"></p>
     <p id="parrafo3"></p>
     <h5>Hola</h5>
