--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h4>Esto es un texto con h4</h4>
     <p id="parrafo1"></p>
     <h2>Ya creé el h2 para resolver la incidencia</h2>
+    <h3>El h3 de prueba</h3>
     <p id="parrafo2"></p>
     <p id="parrafo3"></p>
     <h5>Hola</h5>
