Se resolvió PRAC-4

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <h3>Esto es un h3</h3>
     <h4>Este es un h4 desde la interfaz</h4>
     <h5>Resolviendo la incidencia</h5>
+    <h1>Resolviendo a PRAC-4 2021</h1>
 </body>
 </html>
